[gd_scene load_steps=11 format=3 uid="uid://d0v75n1n4npn4"]

[ext_resource type="Script" path="res://scripts/win_game.gd" id="1_wl2rq"]
[ext_resource type="PackedScene" uid="uid://k635iu86fy37" path="res://scene_objects/menu_background.tscn" id="2_kcvt6"]
[ext_resource type="LabelSettings" uid="uid://csrb5ilr7y6dy" path="res://resources/main_menu_title_label_setting.tres" id="3_hpstx"]
[ext_resource type="FontFile" uid="uid://com4cjqc1ln44" path="res://assets/fonts/Montserrat-Medium.otf" id="4_87tkp"]
[ext_resource type="FontFile" uid="uid://smk86k8i0gcp" path="res://assets/fonts/Montserrat-Bold.otf" id="5_43x4g"]
[ext_resource type="StyleBox" uid="uid://67m76h2nyeyy" path="res://resources/main_menu_button_style.tres" id="6_jwgqf"]
[ext_resource type="StyleBox" uid="uid://cscwrtv4vl12l" path="res://resources/main_menu_button_hover_style.tres" id="7_x6ndy"]
[ext_resource type="StyleBox" uid="uid://dtfd366g1j00" path="res://resources/main_menu_button_pressed_style.tres" id="8_jdo5v"]
[ext_resource type="AudioStream" uid="uid://dni54tcejhs1c" path="res://assets/sfx/Sequence, Typing Burst, Variations, Perspective 02, Clicking 03.ogg" id="9_kqugs"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_285bg"]
bg_color = Color(0, 0, 0, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.12549, 0.384314, 0.486275, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[node name="YouWonScreen" type="Node2D"]
script = ExtResource("1_wl2rq")

[node name="backgroudMenu" parent="." instance=ExtResource("2_kcvt6")]
modulate = Color(1, 0.295309, 0.679364, 1)

[node name="menuContainer" type="VBoxContainer" parent="."]
offset_right = 1920.0
offset_bottom = 1052.0

[node name="TopMargin" type="MarginContainer" parent="menuContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="Title" type="Label" parent="menuContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
text = "YOU WON!"
label_settings = ExtResource("3_hpstx")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TopMargin2" type="MarginContainer" parent="menuContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="optionsContainer" type="HBoxContainer" parent="menuContainer"]
custom_minimum_size = Vector2(0, 600)
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="leftMargin" type="MarginContainer" parent="menuContainer/optionsContainer"]
custom_minimum_size = Vector2(200, 600)
layout_mode = 2

[node name="youWonText" type="RichTextLabel" parent="menuContainer/optionsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(1300, 600)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_constants/line_separation = 25
theme_override_fonts/normal_font = ExtResource("4_87tkp")
theme_override_fonts/bold_font = ExtResource("5_43x4g")
theme_override_font_sizes/normal_font_size = 40
theme_override_font_sizes/bold_font_size = 60
bbcode_enabled = true
text = "[center]Congratulations!

Thanks to your great efforts optimizing textures and 3d models, the videogame project size has been shrinked down to a mere 455 GB!

The project, however, could not be shipped in time due to management issues. Despite eveyone giving it a 200%, the project went over budget and milestones were not met.

The project was swiftly cancelled by the publisher and all developers were layed off, including yourself :-(

Have a nice day![/center]"
scroll_following = true

[node name="rightMargin" type="MarginContainer" parent="menuContainer/optionsContainer"]
custom_minimum_size = Vector2(200, 600)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="menuContainer"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="creditsButton" type="Button" parent="menuContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(650, 75)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
focus_next = NodePath("../PlayButton")
focus_previous = NodePath("../CreditsButton")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_43x4g")
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxFlat_285bg")
theme_override_styles/disabled = ExtResource("6_jwgqf")
theme_override_styles/hover = ExtResource("7_x6ndy")
theme_override_styles/pressed = ExtResource("8_jdo5v")
theme_override_styles/normal = ExtResource("6_jwgqf")
text = "Credits"

[node name="backButton" type="Button" parent="menuContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(650, 75)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
focus_next = NodePath("../PlayButton")
focus_previous = NodePath("../CreditsButton")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_43x4g")
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxFlat_285bg")
theme_override_styles/disabled = ExtResource("6_jwgqf")
theme_override_styles/hover = ExtResource("7_x6ndy")
theme_override_styles/pressed = ExtResource("8_jdo5v")
theme_override_styles/normal = ExtResource("6_jwgqf")
text = "Back to main menu"

[node name="TypingSound" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("9_kqugs")

[connection signal="pressed" from="menuContainer/HBoxContainer/creditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="menuContainer/HBoxContainer/backButton" to="." method="_on_back_button_pressed"]
